--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -1,4 +1,4 @@
-#Mon Jun 18 17:24:38 CEST 2012
+#Tue Jun 19 14:41:22 CEST 2012
 AbstractHydrotopeDataImportWizard_1=Speichern der Daten fehlgeschlagen
 AbstractRemoveOsoleteXmlMembersWorker_0=Enferne veraltete Elemente aus GML\: %s
 AbstractResultTreeNodeUiHandler_0=Simulation\: %s
@@ -69,6 +69,8 @@ CalculateCatchmentModelsWorker_2=Bestimmung der Zeitreihen-Verweise war erfolgre
 CalculateCatchmentModelsWorker_3=Fehler bei der Bestimmung von Zeitreihen-Verweisen.
 CalculateCatchmentModelsWorker_4=Typ des Gebietsmodells muss ILinearSumGenerator oder IMultiGenerator sein...
 CalculateCatchmentModelsWorker_5=Info des Gebietsmodells muss gleich LinearSumCatchmentModelInfo oder MultiCatchmentModelInfo sein...
+CalculateEvaporationAction.0=Verdunstung berechnen
+CalculateEvaporationAction.1=Berechene Gras-/Seeverdunstungs-Zeitreihe f\u00FCr die gew\u00E4hlte Station.
 CalculateEvaporationAction_0=Berechnung Verdunstung
 CalculateEvaporationAction_1=Zeitreihe Mittlere Luftfeuchte fehlt.
 CalculateEvaporationAction_2=Zeitreihe Mittlere Temperatur fehlt.
@@ -166,6 +168,8 @@ CatchmentTimeseriesGuesser_5=Leere Dateiname, Abbruch.
 CatchmentTimeseriesGuesser_6=Keine Zeitreihe mit identischem Dateinamen gefunden.
 CatchmentTimeseriesGuesser_7=Mehrere Zeitreihen mit identischem Dateinamen gefunden. Nehme die erste Zeitreihe vom gleichen Typ.
 CatchmentTimeseriesGuesser_8=Mehrere Zeitreihen mit identischem Dateinamen gefunden - jedoch keine vom Parametertyp '%s'
+ChangeTimeseriesParameterTypeWorker_0=Fehler - konnte Parametertyp nicht \u00E4ndern.
+ChangeTimeseriesParameterTypeWorker_1=Parametertyp der Zeitreihe '%s' wurde auf '%s' ge\u00E4ndert.
 ChooseEvaporationInputFilesPage_1=Berechnungsdaten
 ChooseEvaporationInputFilesPage_11=Der Berechnungszeitraum ist der gemeinsame Zeitraum aller zugewiesener Zeitreihen.
 ChooseEvaporationInputFilesPage_12=Quellen
@@ -205,6 +209,12 @@ CompareScenariosOperation_8=Keine Ver\u00E4nderung
 CompleteNetElementsTaskHandler_0=Kalinin-Miljukov Strang
 CompleteNetElementsTaskHandler_1=Speicherstrang
 CompleteNetElementsTaskHandler_2=Teileinzugsgebiete
+ConvertGeologyOperation_0=Konvertireung der geology.gml fehlgeschlagen.
+ConvertGeologyOperation_1=Konvertiere geology.gml
+ConvertHydrotopesOperation_0=Konvertireung der hydrotop.gml fehlgeschlagen.
+ConvertHydrotopesOperation_1=Konvertiere hydrotop.gml
+ConvertLanduseOperation_0=Konvertireung der landuse.gml fehlgeschlagen.
+ConvertLanduseOperation_1=Konvertiere landuse.gml
 CreateSimulationWorker_0=Erzeuge Simuatlion\u2026
 CreateSimulationWorker_1=Erzeuge Simuatlion\u2026
 CreateSimulationWorker_2=Erzeugen der Simulation war erfolgreich.
@@ -221,6 +231,14 @@ DeleteGeneratorAction_4=L\u00F6sche Gebietsmodell '%s'? Die Aktion kann nicht r\
 DeleteMappingAction_0=L\u00F6sche Zeitreihenzuordnung
 DeleteMappingAction_1=L\u00F6sche selektierte Zeitreihenzuordnung
 DeleteMappingAction_2=Die Zeitreihenzuordnung wird in der Simulation '%s' genutzt und kann deswegen nicht gel\u00F6scht werden.
+DeleteRrmCalcualtionAction_0=L\u00F6sche Berechnungsergebnisse
+DeleteRrmCalcualtionAction_1=L\u00F6sche Berechnungsergebnisse.
+DeleteRrmCalcualtionAction_2=L\u00F6schen
+DeleteRrmCalcualtionAction_3=Sie m\u00F6chten das Berechnungsergebnis '%s' l\u00F6schen?
+DeleteRrmCalcualtionsAction_0=L\u00F6sche alle Berechnungsergebnisse
+DeleteRrmCalcualtionsAction_1=L\u00F6sche alle Berechnungsergebnisse.
+DeleteRrmCalcualtionsAction_2=L\u00F6schen
+DeleteRrmCalcualtionsAction_3=Sie m\u00F6chten alle Berechnungsergebnisse wirklich l\u00F6schen?
 DeleteStationAction_0=L\u00F6sche Station
 DeleteStationAction_1=L\u00F6sche gew\u00E4hlte Station(en)
 DeleteStationAction_2=Element enth\u00E4lt keine Stationen
@@ -292,6 +310,8 @@ EditStationAction_0=Editiere
 EditStationAction_1=Editiere die Eigenschaften der Station
 EditStationAction_2=Editiere Eigenschaften
 EditStationLocationAction_0=Editiere Ort
+EditTimeseriesAction.0=Aktualisierung Zeitreihen-Verweise
+EditTimeseriesAction.1=Bei der Aktualisierung von Zeitreihen-Verweise traten Fehler auf.
 EditTimeseriesAction_0=Zeitreihe editieren
 EditTimeseriesAction_1=Gew\u00E4hlte Zeitreihen editieren
 EditTimeseriesDialog_0=Zeitreihe editieren
@@ -670,6 +690,7 @@ ThiessenGeneratorWizard_2=Bitte w\u00E4hlen Sie die Zeitreihe die als Grundlage 
 ThiessenWizardLayoutPart_0=Allgemeine Einstellungen
 ThiessenWizardLayoutPart_1=F\u00FCr Thiessen verwendete Zeitreihen
 ThiessenWizardLayoutPart_2=\u00C4nderung des Parametertyps \u00E4ndert Liste der Zeitreihen. Nicht gespeicherte \u00C4nderungen gehen verloren. Fortfahren?
+TimeSeriesAlreadyExistsValidator_0=
 TimeseriesBean_0=Datendatei fehlt
 TimeseriesBean_1=Verweis auf Daten nicht gesetzt
 TimeseriesBrowserSearchViewer_0=Station
@@ -692,6 +713,7 @@ TimeseriesImportWizard_2=Quelle\: %s
 TimeseriesImportWizard_3=Zeitreihen-Import
 TimeseriesImportWizard_4=Zeitreihen-Import
 TimeseriesImporter.0=Zeitreihen-Import\: %s
+TimeseriesImporter.1=
 TimeseriesImporter_0=Fehler beim Lesen der stations.gml
 TimeseriesImporter_1=Fehler beim Lesen der stations.gml
 TimeseriesImporter_10=Erzeugt durch Projektkonvertierung
@@ -718,6 +740,17 @@ TimeseriesMappingRunner_3=Fehler beim Kopieren und Filtern von Zeitreihen f\u00F
 TimeseriesMappingTypeUiHandler_0=Zuordnungs Definitionen
 TimeseriesMappingTypeUiHandler_1=Zeitreihenzuordnungen - %s
 TimeseriesMappingUiHandler_0=Zeitreihenzuordnung
+TimeseriesParameterTypeConverter_0=Zeitreihen Parametertype Konvertierer
+TimeseriesParameterTypeConverter_1=Konvertierungsindex ist leer. Keine Konvertierung von n\u00F6ten.
+TimeseriesParameterTypeConverter_2=Konvertiere Zeitreihen Parametertypen
+TimeseriesParameterTypeConverter_3=Konvertiere Zeitreihen des Parametertyps '%s'
+TimeseriesReferencesUpdater_0=Aktualisiere Zeitreihen-Verweise
+TimeseriesReferencesUpdater_1=%s fehlt.
+TimeseriesReferencesUpdater_2=%s Aktualisierung fehlgeschlagen.
+TimeseriesReferencesUpdater_3=%s wurde aktualisiert.
+TimeseriesReferencesUpdater_4=%s fehlt.
+TimeseriesReferencesUpdater_5=%s Aktualisierung fehlgeschlagen.
+TimeseriesReferencesUpdater_6=%s wurde aktualisiert.
 TimeseriesThiessenPolygons_0=Fehler beim Lesen der Thiessen Polygondaten
 TimeseriesUiHandler_0=Zeitreihe
 TimeseriesUiHandler_1=L\u00F6sche Zeitreihe '%s' der Station '%s'
@@ -737,6 +770,8 @@ ValidateRuecksprungOperation.0=Zeitliche R\u00FCcksprung-\u00DCberpr\u00FCfung
 ValidateRuecksprungVisitor.0=dd.MM.yyyy HH\:mm\:ss
 ValidateRuecksprungVisitor.1=Zeitlicher R\u00FCcksprung im Bereich\: %s - %s
 ValidateRuecksprungVisitor.2=\u00DCberpr\u00FCfung zeitliche R\u00FCckspr\u00FCnge
+ValidateSimulationJob.0=Kein Generator verf\u00FCgbar\u2026
+ValidateSimulationJob.1=Keine Simualtion verf\u00FCgbar\u2026
 ValidateSimulationJob_1=Nicht verf\u00FCgbar.
 ValidateSimulationJob_10=Die Werte haben sich nicht ver\u00E4ndert.
 ValidateSimulationJob_11=Einige Zeitreihen des Gebietsmodells haben sich ver\u00E4ndert.
