--- a/trunk/KalypsoModelProduct/src/org/kalypso/model/product/i18n/messages.properties
+++ b/trunk/KalypsoModelProduct/src/org/kalypso/model/product/i18n/messages.properties
@@ -1,3 +1,6 @@
+#Tue Jun 19 15:02:03 CEST 2012
+KalypsoWelcomePage.0=Failed to open external browser at %s
+KalypsoWelcomePage.1=Failed to open external browser at %s
 org.kalypso.model.product.application.KalypsoModelApplication.0=Kalypso Simulation Platform
 org.kalypso.model.product.application.KalypsoModelApplication.2=IDEs need a valid workspace. Restart without the @none option.
 org.kalypso.model.product.application.KalypsoModelApplication.3=Could not launch the product because the associated workspace is currently in use by another Kalypso application.
