--- a/KalypsoModelProduct/src/org/kalypso/model/product/i18n/messages_de.properties
+++ b/KalypsoModelProduct/src/org/kalypso/model/product/i18n/messages_de.properties
@@ -1,7 +1,10 @@
+#Tue Jun 19 15:02:03 CEST 2012
+KalypsoWelcomePage.0=\u00D6ffnen des externen Browser fehlgeschlagen f\u00FCr %s
+KalypsoWelcomePage.1=\u00D6ffnen des externen Browser fehlgeschlagen f\u00FCr %s
 org.kalypso.model.product.application.KalypsoModelApplication.0=Kalypso Simulation Platform
-org.kalypso.model.product.application.KalypsoModelApplication.2=IDEs benötigt einen gültigen Workspace. Neustart ohne die @none Option.
+org.kalypso.model.product.application.KalypsoModelApplication.2=IDEs ben\u00F6tigt einen g\u00FCltigen Workspace. Neustart ohne die @none Option.
 org.kalypso.model.product.application.KalypsoModelApplication.3=Kalypso kann nicht gestartet werden, da der Workspace noch von einer anderen Kalypso-Anwendung benutzt wird.
-org.kalypso.model.product.application.KalypsoModelApplication.4=Kalypso kann nicht gestartet werden, weil kein Workspace erueugt werden kann. Ungültiger oder Schreibgeschützter Verzeicnispfad.
+org.kalypso.model.product.application.KalypsoModelApplication.4=Kalypso kann nicht gestartet werden, weil kein Workspace erueugt werden kann. Ung\u00FCltiger oder Schreibgesch\u00FCtzter Verzeicnispfad.
 org.kalypso.model.product.application.KalypsoModelApplication.5=Could not obtain lock for workspace location
 org.kalypso.model.product.application.KalypsoModelApplication.6=Kalypso kann nicht gestartet werden, weil kein Workspace angegeben ist.
 org.kalypso.model.product.application.KalypsoModelWorkbenchWindowAdvisor.0=Kalypso Simulation Platform
