feature list comparator, better compare in merge scenarios wizard, i18n typos

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -123,7 +123,7 @@ CatchmentModelHelper_1=\u00DCberpr\u00FCfung des Gesamtgebietsmodells '%s'
 CatchmentModelHelper_12=Niederschlag
 CatchmentModelHelper_13=Temperatur
 CatchmentModelHelper_14=Verdunstung
-CatchmentModelHelper_15=\u00DCberpr\u00FCfung der Zeitreihe abgeschlossen.
+CatchmentModelHelper_15=\u00DCberpr\u00FCfung der Zeitreihen abgeschlossen.
 CatchmentModelHelper_16=\u00DCberpr\u00FCfung des Gebietsmodells '%s'
 CatchmentModelHelper_17=\u00DCberpr\u00FCfung der Zeitreihenzuordnungen des Typs '%s'
 CatchmentModelHelper_18=Die neue Zeitreihen Wert unterscheidet sich um %d%% (%d Differenz).
