--- a/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
+++ b/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
@@ -191,7 +191,7 @@ org.kalypso.convert.namodel.schema.binding.GeologyCollection.3=Geology '%s' was 
 org.kalypso.convert.namodel.schema.binding.GeologyCollection.2=Ignoring imported geology '%s' due to intersection
 org.kalypso.convert.namodel.NaModelInnerCalcJob.155=max. Abfluss
 CatchmentHydrotopeInput_1=Teileinzugsgebiet
-HydrotopeInfo.2=Gesamtversiegelung %.2f au\u00DFerhalb des Wertebereichs [0.0 - 1.0] f\u00FCr Hydrotop %s.
+HydrotopeInfo.2=Gesamtversiegelung %.2f (inklusive Korrekturfaktoren an Teilgebiet und Landnutzung) au\u00DFerhalb des Wertebereichs [0.0 - %.10f] f\u00FCr Hydrotop %s.
 org.kalypso.convert.namodel.schema.binding.GeologyCollection.1=Geology '%s' was deleted due to intersection
 CatchmentHydrotopeInput_0=Negativer Wert: %
 NaFortranLogTranslater.4=Fehler beim Schreiben der konvertierten Logdatei %s
