--- a/trunk/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages.properties
+++ b/trunk/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages.properties
@@ -191,7 +191,7 @@ org.kalypso.convert.namodel.schema.binding.GeologyCollection.3=Geology '%s' was 
 org.kalypso.convert.namodel.schema.binding.GeologyCollection.2=Ignoring imported geology '%s' due to intersection
 org.kalypso.convert.namodel.NaModelInnerCalcJob.155=max. Abfluss
 CatchmentHydrotopeInput_1=Catchments
-HydrotopeInfo.2=Total sealing %.2f outside valid range (0.0 - 1.0) for hydrotope %s.
+HydrotopeInfo.2=Total sealing %.2f (including correction factors in catchment and landuse) outside valid range (0.0 - %.10f) for hydrotope %s.
 org.kalypso.convert.namodel.schema.binding.GeologyCollection.1=Geology '%s' was deleted due to intersection
 CatchmentHydrotopeInput_0=Negative value: %s
 NaFortranLogTranslater.4=Failed to write translated KalypsoNA log file %s
