--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -493,7 +493,7 @@ MergeScenariosOperation_4=Copying simulations of scenario '%s'...
 MergeScenariosOperation_9=Cleaning up scenario '%s'...
 MergeScenariosWizardPage_0=Scenarios merged.
 MergeScenariosWizardPage_1=Select the scenarion which should be merged into the scenario '%s'.
-MergeScenariosWizardPage_2=Delete merged Scenarios
+MergeScenariosWizardPage_2=Delete merged scenarios (only scenarios without sub scenarios)
 MergeScenariosWizardPage_3=Compare with '%s'
 MergeScenariosWizardPage_4=Scenario
 MergeScenariosWizardPage_5=Model
