--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -493,7 +493,7 @@ MergeScenariosOperation_4=Kopiere Simulationen des Szenarios '%s'\u2026
 MergeScenariosOperation_9=S\u00E4ubere Szenario '%s'\u2026
 MergeScenariosWizardPage_0=Szenarien zusammenf\u00FChren
 MergeScenariosWizardPage_1=Auswahl der Szenarien, die in das Szenario '%s' zusammengef\u00FChrt werden sollen.
-MergeScenariosWizardPage_2=Importierte Szenarien l\u00F6schen
+MergeScenariosWizardPage_2=Importierte Szenarien l\u00F6schen (Nur Szenarien ohne Unterszenarien)
 MergeScenariosWizardPage_3=Mit '%s' vergleichen
 MergeScenariosWizardPage_4=Szenario
 MergeScenariosWizardPage_5=Modell
