--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -24,7 +24,7 @@ BasicModelConverter.7=Save station file
 BasicModelConverter.8=Convert timeseries from folder '%s'
 BasicModelConverter.9=Updating timeseries references
 BasicModelConverter_1=Basic Data Import
-BasicModelConverter_2=Project does not contains a definition for syntetic precipitation. The default file will be used.
+BasicModelConverter_2=Project does not contains a definition for synthetic precipitation. The default file will be used.
 BasicModelConverter_4=Directory '%s' missing in project.
 CalcCaseConverter.0=Original_Results
 CalcCaseConverter.1=Existing results ('%s') have been renamed to '%s'.
@@ -46,26 +46,26 @@ CalcCaseConverter.3=Start condition should be at 0 AM, but is %s. Time of start 
 CalcCaseConverter.4=Timeseries links have been updated.
 CalcCaseConverter.5=Missing 'Pegel' folder in calculation case. Creating an empty folder.
 CalcCaseConverter.6=Missing 'Zufluss' folder in calculation case. Creating an empty folder.
-CalcCaseConverter.7=Missing hydrotope file in caclulation case. Copying the main hydrotope file.
+CalcCaseConverter.7=Missing hydrotope file in calculation case. Copying the main hydrotope file.
 CalcCaseConverter.8=Control parameters have been converted
 CalcCaseConverter.9=Output control parameters have been converted
 CalcCaseConverter_0=Copy basic data
 CalcCaseConverter_2=Version of calculation module has been changed to '%s' (was '%s').
-CalcCaseConverter_3=Caclulation module was already set to '%s'.
+CalcCaseConverter_3=Calculation module was already set to '%s'.
 CalcCaseConverter_4=Synthetic precipitation. No timeseries extension necessary.
 CalcCaseJob_0=Running simulation
 CalcCaseJob_1=Problem(s) during simulation
 CalcCaseJob_2=Simulation terminated
-CalcCasesConverter_0=Calc Case Import
-CalcCasesConverter_1=Importing calc cases
-CalcCasesConverter_2=Calc case '%s' (%d of %d)\u2026
+CalcCasesConverter_0=Calculation Case Import
+CalcCasesConverter_1=Importing calculation cases
+CalcCasesConverter_2=Calculation case '%s' (%d of %d)\u2026
 CalcCasesConverter_3=Operation cancelled by user
-CalcCasesConverter_4=Unexpected error during import of calc case '%s'
-CalcCasesConverter_5=Failed to access calc case
+CalcCasesConverter_4=Unexpected error during import of calculation case '%s'
+CalcCasesConverter_5=Failed to access calculation case
 CalcCasesConverter_6=Other
 CalculateCatchmentModelsWorker_0=Calculating timeseries mappings...
 CalculateCatchmentModelsWorker_1=Calculating timeseries mappings...
-CalculateCatchmentModelsWorker_2=Calculation of the timeseries mappings was successfull.
+CalculateCatchmentModelsWorker_2=Calculation of the timeseries mappings was successful.
 CalculateCatchmentModelsWorker_3=Error during calculation of the timeseries mappings.
 CalculateCatchmentModelsWorker_4=The type of the generator must be that of ILinearSumGenerator or IMultiGenerator...
 CalculateCatchmentModelsWorker_5=The info of the catchment model must be that of LinearSumCatchmentModelInfo or MultiCatchmentModelInfo...
@@ -86,7 +86,7 @@ CalculateSimulationDialog_3=Refresh Simulation(s)
 CalculateSimulationDialog_4=If checked, all timeseries data will be refreshed. For simulations that needs to be created, the refresh will always be done, regardless the selection here.
 CalculateSimulationDialog_5=Refresh
 CalculateSimulationDialog_6=Calculate Start Conditions
-CalculateSimulationDialog_7=If checked, the start conditions will be calculated. This affects only longterm simulations.
+CalculateSimulationDialog_7=If checked, the start conditions will be calculated. This affects only long term simulations.
 CalculateSimulationDialog_8=Calculate
 CalculateSimulationRunnable_0=dd.MM.yy HH\:mm
 CalculateSimulationRunnable_1=Calculating simulations...
@@ -109,7 +109,7 @@ CalculateSimulationRunnable_9=Preparing...
 CalculateSimulationWorker_0=Calculating simulation...
 CalculateSimulationWorker_1=Calculating simulation...
 CalculateSimulationWorker_2=Error during calculation of the simulation.
-CalculateSimulationWorker_3=Calculation of the simulation was successfull.
+CalculateSimulationWorker_3=Calculation of the simulation was successful.
 CalculateSimulationWorker_4=Error during calculation of the simulation.
 CatchmentBean_0=The sum of factors (%d%%) is not allowed to be zero or negative.
 CatchmentBean_1=The sum of factors (%d%%) is not allowed to be greater than 100.
@@ -217,7 +217,7 @@ ConvertLanduseOperation_0=Failed to convert landuse.gml
 ConvertLanduseOperation_1=Convert landuse.gml
 CreateSimulationWorker_0=Creating simulation...
 CreateSimulationWorker_1=Creating simulation...
-CreateSimulationWorker_2=Creation of the simulation was successfull.
+CreateSimulationWorker_2=Creation of the simulation was successful.
 CreateSimulationWorker_3=Error during creation of the simulation.
 DRWBMMeasureDefinitionTaskHandler_0=DRWBM Profiles
 DRWBMMeasureDefinitionTaskHandler_1=DRWBM Definitions
@@ -274,7 +274,7 @@ EditLinearSumDialog_6=No catchment selected.
 EditLinearSumDialog_7=Group
 EditLinearSumDialog_8=Station
 EditLinearSumDialog_9=Time step
-EditLinearSumIdwAction.0=%s. This could have happend because the model has changed. The catchments will be newly initialized...
+EditLinearSumIdwAction.0=%s. This could have happened because the model has changed. The catchments will be newly initialized...
 EditLinearSumIdwAction.1=Failed to edit the catchment model...
 EditLinearSumIdwAction_0=Edit Inverse Distance Weighting
 EditLinearSumIdwAction_1=Recalculate IDW factors of the selected generator
@@ -287,7 +287,7 @@ EditMappingAction_1=Edit the properties of the mapping
 EditMappingAction_2=Timeseries mapping contains invalid elements (will be lost after edit)\:
 EditMultiDialog_0=Edit Multi Catchment Model
 EditMultiDialog_1=Edit Multi Catchment Model
-EditMultiDialog_2=Multigenerator
+EditMultiDialog_2=Multi Gernator
 EditMultiDialog_3=Generators
 EditMultiDialog_4=Dialog has validation errors. %s
 EditMultiDialog_5=Description
@@ -418,7 +418,7 @@ KalypsoNAProjectPreferences.KMChannelDataLable=Number of specific discharges (to
 KalypsoNAProjectPreferences.KMChannelErrorMessage=The number of discharges should always be 5\!
 KalypsoNAProjectPreferences.KMChannelGroupLable=Number of discharges (determined by hydraulic models)
 KalypsoNAProjectPreferences.KMChannelGroupText=Kalinin-Miljukov Strands
-KalypsoNAProjectPreferences.SoilDataToolTipText=Number of soil horizonts (will be prepared for modelling)
+KalypsoNAProjectPreferences.SoilDataToolTipText=Number of soil horizons (will be prepared for modelling)
 KalypsoNAProjectPreferences.SoilGroupLable=Number of soil horizons
 KalypsoNAProjectPreferences.SoilGroupText=Sub-Catchments / Soil Horizons
 KalypsoNAProjectPreferences.Title=General Project Settings
@@ -492,7 +492,7 @@ MergeScenariosOperation_3=Merging the scenarios into the scenario '%s' failed.
 MergeScenariosOperation_4=Copying simulations of scenario '%s'...
 MergeScenariosOperation_9=Cleaning up scenario '%s'...
 MergeScenariosWizardPage_0=Scenarios merged.
-MergeScenariosWizardPage_1=Select the scenarion which should be merged into the scenario '%s'.
+MergeScenariosWizardPage_1=Select the scenario which should be merged into the scenario '%s'.
 MergeScenariosWizardPage_2=Delete merged scenarios (only scenarios without sub scenarios)
 MergeScenariosWizardPage_3=Compare with '%s'
 MergeScenariosWizardPage_4=Scenario
@@ -528,7 +528,7 @@ NaModelStrategy_3=Categories
 NaModelStrategy_4=Storage Channels
 NaModelStrategy_5=Catchment models
 NaModelStrategy_6=Nodes
-NewCalcCaseAction_0=Update calc case
+NewCalcCaseAction_0=Update calculation case
 NewHydrologicalStationAction_0=New Hydrological Station
 NewHydrologicalStationAction_1=Creates a new hydrologcial station
 NewLinearSumGeneratorAction_0=New Catchment Model (Linear Sum)
@@ -560,22 +560,22 @@ ParameterUiHandler_0=Parameter Type
 ParameterUiHandler_1=Delete all timeseries from parameter '%s' of station '%s'?
 PrepareLongtermSimulationWorker_0=Preparing simulation...
 PrepareLongtermSimulationWorker_1=Preparing simulation...
-PrepareLongtermSimulationWorker_2=This is a longterm simulation.
+PrepareLongtermSimulationWorker_2=This is a long term simulation.
 PrepareLongtermSimulationWorker_3=Start conditions should be calculated.
 PrepareLongtermSimulationWorker_4=Start conditions should not be calculated.
-PrepareLongtermSimulationWorker_5=Peparation of the simulation was successfull.
+PrepareLongtermSimulationWorker_5=Preparation of the simulation was successful.
 PrepareLongtermSimulationWorker_6=Error during preparation of the simulation.
 PrepareShorttermSimulationWorker_0=Preparing simulation...
 PrepareShorttermSimulationWorker_1=Preparing simulation...
 PrepareShorttermSimulationWorker_11=Failed to copy initial values from simulation '%s'\: Initial values missing (%s).
 PrepareShorttermSimulationWorker_12=Initial values were loaded from simulation '%s'.
 PrepareShorttermSimulationWorker_13=Failed to load initial values from simulation '%s'.
-PrepareShorttermSimulationWorker_2=This is a shortterm simulation.
-PrepareShorttermSimulationWorker_3=It does reference a longterm simulation.
-PrepareShorttermSimulationWorker_4=It does not reference a longterm simulation.
-PrepareShorttermSimulationWorker_5=Peparation of the simulation was successfull.
+PrepareShorttermSimulationWorker_2=This is a short term simulation.
+PrepareShorttermSimulationWorker_3=It does reference a long term simulation.
+PrepareShorttermSimulationWorker_4=It does not reference a long term simulation.
+PrepareShorttermSimulationWorker_5=Preparation of the simulation was successful.
 PrepareShorttermSimulationWorker_6=Error during preparation of the simulation.
-PrepareShorttermSimulationWorker_7=No longterm simulation is set.
+PrepareShorttermSimulationWorker_7=No long term simulation is set.
 PrepareShorttermSimulationWorker_8=Failed to copy initial values from simulation '%s'\: Simulation does not exist.
 PrepareShorttermSimulationWorker_9=Failed to copy initial values from simulation '%s'\: No results available.
 RRMCreateHydrotopsHandler.0=Failed to find input data\: %s
@@ -601,7 +601,7 @@ RepairMissingTimestepsOperation_0=Filling gaps and missing values
 RepairMissingTimestepsOperation_2=Gaps are detected
 RepairMissingTimestepsOperation_3=Missing time steps in timeseries %s.\r\n\r\nAdd missing values automatically?
 RepairObservationJob_0=Repair timeseries?
-RepairObservationJob_1=Inport canceled. Incorrect input timeseries.
+RepairObservationJob_1=Import canceled. Incorrect input timeseries.
 RepairRueckspruengeOperation_0=R\u00FCcksprung has been deleted.
 RepairRueckspruengeOperation_1=Error \u2013 couldn't delete R\u00FCckspr\u00FCnge.
 RepairRueckspruengeOperation_2=R\u00FCcksprung has been removed.
@@ -609,7 +609,7 @@ RepairRueckspruengeOperation_3=Auto repair R\u00FCckspr\u00FCnge?
 RepairTimeseriesOperation_0=Timeseries '%s' will be automatically repaired and adjusted.
 RepairTimestampsOperation_0=R\u00FCcksprung has been removed.
 RepairTimestampsOperation_1=Error \u2013 couldn't delete R\u00FCckspr\u00FCnge.
-RepairTimestampsOperation_2=Repair wron time stamps?
+RepairTimestampsOperation_2=Repair wrong time stamps?
 RepairTimestampsOperation_3=Auto repair wrong time stamps?
 ReplaceTimeseriesAction_0=Replace Timeseries
 ReplaceTimeseriesAction_1=Replace selected Timeseries
@@ -625,7 +625,7 @@ RrmProjectConverter.0=Converting '%s'
 RrmProjectConverter103to230_0=Converting project '%s' to version '%s'.
 RrmProjectConverter103to230_1=Project '%s'
 RrmProjectConverter103to230_2=converting basic data\u2026
-RrmProjectConverter103to230_3=converting calc cases\u2026
+RrmProjectConverter103to230_3=converting calculation cases\u2026
 RrmProjectConverterXto10.10.0=<automatically use 'latest' version>
 RrmProjectConverterXto10.10.1=<keep current setting>
 RrmProjectConverterXto10.10.2=Please choose calculation module for KalypsoHydrology
@@ -655,7 +655,7 @@ SimulationCalculationFeatureControl.8=Balance
 SimulationCalculationFeatureControl.9=Displays the balance.
 SimulationHandler_0=Simulations with empty name detected. Please rename the simulations.
 SimulationHandler_1=OK
-SimulationHandler_2=The calculation was cancled.
+SimulationHandler_2=The calculation was canceled.
 SimulationHandler_3=Calculate Simulations
 SnowTaskHandler_0=Snow Types
 SoilTaskHandler_0=Layers
@@ -690,7 +690,7 @@ ThiessenGeneratorWizard_2=Please select the timeseries that should be used to ge
 ThiessenWizardLayoutPart_0=General Properties
 ThiessenWizardLayoutPart_1=Timeseries used for Thiessen
 ThiessenWizardLayoutPart_2=Changing the parameter type needs to update the list of timeseries. Unsaved changes will be lost. Continue?
-TimeSeriesAlreadyExistsValidator_0=Verdunstungszeitreihe mit gleicher Qualit\u00E4t existiert bereits.
+TimeSeriesAlreadyExistsValidator_0=Evaporation timeseries of the same type already exists
 TimeseriesBean_0=Data file missing
 TimeseriesBean_1=Data link not set
 TimeseriesBrowserSearchViewer_0=Station
@@ -743,7 +743,7 @@ TimeseriesMappingUiHandler_0=Timeseries Mapping
 TimeseriesParameterTypeConverter_0=Timeseries Parameter Type Converter
 TimeseriesParameterTypeConverter_1=Conversion map is empty. No conversion needed.
 TimeseriesParameterTypeConverter_2=Converting timeseries parameter types
-TimeseriesParameterTypeConverter_3=Converting time series of paramter type '%s'
+TimeseriesParameterTypeConverter_3=Converting time series of parameter type '%s'
 TimeseriesReferencesUpdater_0=Updating of timeseries references.
 TimeseriesReferencesUpdater_1=%s is missing.
 TimeseriesReferencesUpdater_2=%s update failed.
@@ -759,9 +759,9 @@ TimestampValidator_1=OK
 TimestepValidator_0=For day values, a timestamp is needed...
 TimestepValidator_1=OK
 TreePropertiesView_0=- no element selected -
-UpdateCalcCaseOperation_0=Updating calc case(s)
-UpdateCalcCaseOperation_1=Problem(s) occured during update
-UpdateCalcCaseTimeseries.0=Update calc cases
+UpdateCalcCaseOperation_0=Updating calculation case(s)
+UpdateCalcCaseOperation_1=Problem(s) occurred during update
+UpdateCalcCaseTimeseries.0=Update calculation cases
 UpdateTimeseriesLinks_0=Updating timeseries links
 UpdateTimeseriesLinks_1=Updating of model file "%s" failed.
 UpdateTimeseriesLinks_2=Updated model file "%s"
@@ -796,8 +796,8 @@ ValidateSimulationJob_6=Results are outdated.
 ValidateSimulationJob_7=Results are up to date.
 ValidateSimulationJob_8=Validation has failed.
 ValidateSimulationJob_9=Some values of the generator has changed.
-ValidateTageszeitreihenOperation_0=Checking timesteps of day resuluted timeseries
-ValidateTageszeitreihenOperation_1=Canceld detection. Resultion of timeseries \!\= 24h
+ValidateTageszeitreihenOperation_0=Checking timesteps of day resulted timeseries
+ValidateTageszeitreihenOperation_1=Canceled detection. Resolution of timeseries \!\= 24h
 ValidateTimestampVisitor.0=yyyy-MM-dd HH\:mm\:ss
 ValidateTimestampVisitor.1=Invalid timestamp detected\: %s
 ValidateTimestampVisitor.2=Invalid timestamp(s) detected
@@ -832,7 +832,7 @@ org.kalypso.ogc.gml.map.widgets.editrelation.RelationType.3=\ has already been s
 org.kalypso.ogc.gml.map.widgets.editrelation.RelationType.5=\ maximum number of relations reached (
 org.kalypso.ogc.gml.map.widgets.editrelation.RelationType.8=\ has not been set
 org.kalypso.ogc.sensor.view.ObservationViewerDialog.3=Create
-org.kalypso.ogc.sensor.view.ObservationViewerDialog.4=Creates a new Timeserie
+org.kalypso.ogc.sensor.view.ObservationViewerDialog.4=Creates a new Timeseries
 org.kalypso.ogc.sensor.view.ObservationViewerDialog.5=Idealized annual vegetation cycle
 org.kalypso.ogc.sensor.view.ObservationViewerDialog.6=Create
 org.kalypso.ogc.sensor.view.ObservationViewerDialog.7=Creates a new Vegetation-Cycle
@@ -875,7 +875,7 @@ org.kalypso.ui.rrm.internal.map.editRelation.LightRelationType.0=Only one relati
 org.kalypso.ui.rrm.internal.map.editRelation.LightRelationType.1=Maximum number of relations reached
 org.kalypso.ui.rrm.internal.newproject.KalypsoNAProjectWizardPage.3=Unknown annotation type\:
 org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.0=Geology Import
-org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.10=Could not load Shape File. File is corrupted, or nessesary dbf/shx is missing
+org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.10=Could not load Shape File. File is corrupted, or necessary dbf/shx is missing
 org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.11=Browse
 org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.12=Max percolation rate property
 org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.14=Ground water factor property
@@ -885,7 +885,7 @@ org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.4=Input Sha
 org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.6=Invalid source file path
 org.kalypso.ui.rrm.wizards.importGeologyDataImportGeologyWizard.0=Geology Import
 org.kalypso.ui.rrm.wizards.importGeologyDataImportGeologyWizard.1=Geology import error
-org.kalypso.ui.rrm.wizards.importLanduse.ImportLanduseWizardPage.10=Could not load Shape File. File is corrupted, or nessesary dbf/shx is missing
+org.kalypso.ui.rrm.wizards.importLanduse.ImportLanduseWizardPage.10=Could not load Shape File. File is corrupted, or necessary dbf/shx is missing
 org.kalypso.ui.rrm.wizards.importLanduse.ImportLanduseWizardPage.11=Browse
 org.kalypso.ui.rrm.wizards.importLanduse.ImportLanduseWizardPage.12=Landuse property
 org.kalypso.ui.rrm.wizards.importLanduse.ImportLanduseWizardPage.14=Sealing factor property
@@ -897,7 +897,7 @@ org.kalypso.ui.rrm.wizards.importLanduseImportLanduseWizard.0=Landuse Import
 org.kalypso.ui.rrm.wizards.importLanduseImportLanduseWizard.1=Landuse import error
 org.kalypso.ui.rrm.wizards.importLanduseImportLanduseWizardPage.0=Landuse Import
 org.kalypso.ui.rrm.wizards.importPedologyData.ImportPedologyWizardPage.0=Pedology Import
-org.kalypso.ui.rrm.wizards.importPedologyData.ImportPedologyWizardPage.10=Failed to load Shape File. File is corrupt, or nessesary dbf/shx is missing
+org.kalypso.ui.rrm.wizards.importPedologyData.ImportPedologyWizardPage.10=Failed to load Shape File. File is corrupt, or necessary dbf/shx is missing
 org.kalypso.ui.rrm.wizards.importPedologyData.ImportPedologyWizardPage.11=Browse
 org.kalypso.ui.rrm.wizards.importPedologyData.ImportPedologyWizardPage.12=Soil type property
 org.kalypso.ui.rrm.wizards.importPedologyData.ImportPedologyWizardPage.2=Pedology Import Wizard
